--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 </head>
 <body>
 <div class="container">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Logo_BCP_Alfin.png" alt="Alfin Logo" class="logo">
+    <img src="https://cdn.brandfetch.io/idQFTGPNtB/theme/dark/logo.svg?c=1bxid64Mup7aczewSAYMX&t=1752446110924" alt="Alfin Logo" class="logo">
     <h1>Formulario Cliente Alfin</h1>
     <form id="formulario">
         <label for="nombre">Nombre:</label>
