--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     h1 {
         text-align: center;
-        color: #1d2b5c;
+        color: #8f1a95;
         margin-bottom: 20px;
         font-size: 24px;
     }
@@ -44,7 +44,7 @@
         display: block;
         margin-bottom: 6px;
         font-weight: 500;
-        color: #333;
+        color: #8f1a95;
     }
 
     input {
@@ -60,7 +60,7 @@
     button {
         width: 100%;
         padding: 12px;
-        background-color: #1d2b5c;
+        background-color: #fa4616;
         color: #fff;
         font-size: 18px;
         border: none;
@@ -132,3 +132,4 @@ function generarPDF() {
 </script>
 </body>
 </html>
+
