--- a/index.html
+++ b/index.html
@@ -4,88 +4,61 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Formulario Cliente Alfin</title>
-<!-- Google Fonts para estilo profesional -->
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 <style>
-    body {
-        font-family: 'Roboto', sans-serif;
-        margin: 0;
-        padding: 0;
-        background: #f4f6f8;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-height: 100vh;
-    }
-
-    .container {
-        background: #ffffff;
-        padding: 30px;
-        border-radius: 12px;
-        box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-        max-width: 500px;
-        width: 90%;
-    }
-
-    .logo {
-        display: block;
-        margin: 0 auto 20px auto;
-        max-width: 150px;
-    }
-
-    h1 {
-        text-align: center;
-        color: #8f1a95;
-        margin-bottom: 20px;
-        font-size: 24px;
-    }
-
-    label {
-        display: block;
-        margin-bottom: 6px;
-        font-weight: 500;
-        color: #8f1a95;
-    }
-
-    input {
-        width: 100%;
-        padding: 10px 12px;
-        margin-bottom: 15px;
-        border: 1px solid #ccc;
-        border-radius: 8px;
-        font-size: 16px;
-        box-sizing: border-box;
-    }
-
-    button {
-        width: 100%;
-        padding: 12px;
-        background-color: #fa4616;
-        color: #fff;
-        font-size: 18px;
-        border: none;
-        border-radius: 8px;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-    }
-
-    button:hover {
-        background-color: #374785;
-    }
-
-    @media(max-width: 500px){
-        .container {
-            padding: 20px;
-        }
-
-        h1 {
-            font-size: 20px;
-        }
-
-        button {
-            font-size: 16px;
-        }
-    }
+body {
+    font-family: 'Roboto', sans-serif;
+    background: #f4f6f8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+.container {
+    background: #fff;
+    padding: 30px;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    max-width: 500px;
+    width: 90%;
+}
+.logo {
+    display: block;
+    margin: 0 auto 20px auto;
+    max-width: 150px;
+}
+h1 {
+    text-align: center;
+    color: #8f1a95;
+    margin-bottom: 20px;
+}
+label {
+    display: block;
+    margin-bottom: 6px;
+    font-weight: 500;
+    color: #8f1a95;
+}
+input {
+    width: 100%;
+    padding: 10px 12px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    font-size: 16px;
+}
+button {
+    width: 100%;
+    padding: 12px;
+    background-color: #fa4616;
+    color: #fff;
+    font-size: 18px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+}
+button:hover {
+    background-color: #e03e14;
+}
 </style>
 </head>
 <body>
@@ -93,41 +66,40 @@
     <img src="https://cdn.brandfetch.io/idQFTGPNtB/theme/dark/logo.svg?c=1bxid64Mup7aczewSAYMX&t=1752446110924" alt="Alfin Logo" class="logo">
     <h1>Formulario Cliente Alfin</h1>
     <form id="formulario">
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" placeholder="Ingrese su nombre" required>
-
-        <label for="correo">Correo:</label>
-        <input type="email" id="correo" placeholder="Ingrese su correo" required>
+        <label for="razon">Razón Social:</label>
+        <input type="text" id="razon" placeholder="Ingrese la razón social" required>
 
         <label for="ruc">RUC:</label>
-        <input type="text" id="ruc" placeholder="Ingrese su RUC" required>
+        <input type="text" id="ruc" placeholder="Ingrese el RUC" required>
 
-        <button type="button" onclick="generarPDF()">Generar Documentos</button>
+        <label for="domicilio">Domicilio:</label>
+        <input type="text" id="domicilio" placeholder="Ingrese el domicilio" required>
+
+        <label for="correo">Correo:</label>
+        <input type="email" id="correo" placeholder="Ingrese el correo" required>
+
+        <button type="button" onclick="enviarDatos()">Enviar</button>
     </form>
 </div>
 
-<!-- jsPDF para generar PDFs en el navegador -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script>
-function generarPDF() {
-    const { jsPDF } = window.jspdf;
-
-    const nombre = document.getElementById('nombre').value;
-    const correo = document.getElementById('correo').value;
+function enviarDatos() {
+    const razon = document.getElementById('razon').value;
     const ruc = document.getElementById('ruc').value;
+    const domicilio = document.getElementById('domicilio').value;
+    const correo = document.getElementById('correo').value;
 
-    for (let i = 1; i <= 5; i++) {
-        const doc = new jsPDF();
-        doc.setFontSize(16);
-        doc.text(`Documento ${i}`, 20, 20);
-        doc.setFontSize(12);
-        doc.text(`Nombre: ${nombre}`, 20, 40);
-        doc.text(`Correo: ${correo}`, 20, 50);
-        doc.text(`RUC: ${ruc}`, 20, 60);
-        doc.save(`Documento${i}.pdf`);
-    }
+    // Crear CSV
+    const csvContent = `data:text/csv;charset=utf-8,Razón Social,RUC,Domicilio,Correo\n${razon},${ruc},${domicilio},${correo}`;
+    const encodedUri = encodeURI(csvContent);
+    const link = document.createElement("a");
+    link.setAttribute("href", encodedUri);
+    link.setAttribute("download", `registro_cliente.csv`);
+    document.body.appendChild(link);
+    link.click();
+    document.body.removeChild(link);
 
-    alert("Se han generado los 5 documentos. Revisa tus descargas.");
+    alert("¡Registro completado! Se ha descargado un CSV con tus datos.");
 }
 </script>
 </body>
