--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ button:hover {
     <img src="https://cdn.brandfetch.io/idQFTGPNtB/theme/dark/logo.svg?c=1bxid64Mup7aczewSAYMX&t=1752446110924" alt="Alfin Logo" class="logo">
     <h1>Formulario Cliente Alfin</h1>
     <form id="formulario">
+        <form action="https://formspree.io/f/xjkevdoz" method="POST">
         <label for="razon">Razón Social:</label>
         <input type="text" id="razon" placeholder="Ingrese la razón social" required>
 
